feat: update thesis title, enhance abstract, and introduction

--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -1,23 +1,5 @@
 
 
-@misc{who_website2024,
-  author = {WHO},
-  title = {Vector Borne Diseases - Key Facts},
-  howpublished = {\href{https://www.who.int/news-room/fact-sheets/detail/vector-borne-diseases}{WHO Newsroom}},
-  year = {2024}
-}
-
-@article{ferguson2006strategies,
-  title={Strategies for mitigating an influenza pandemic},
-  author={Ferguson, Neil M and Cummings, Derek AT and Fraser, Christophe and Cajka, James C and Cooley, Philip C and Burke, Donald S},
-  journal={Nature},
-  volume={442},
-  number={7101},
-  pages={448--452},
-  year={2006},
-  publisher={Nature Publishing Group}
-}
-
 @article{martin2023trackintel,
   title={Trackintel: An open-source python library for human mobility analysis},
   author={Martin, Henry and Hong, Ye and Wiedemann, Nina and Bucher, Dominik and Raubal, Martin},
@@ -322,28 +304,6 @@
   year={2021}
 }
 
-@article{kermack1927contribution,
-  title={A contribution to the mathematical theory of epidemics},
-  author={Kermack, William Ogilvy and McKendrick, Anderson Gray},
-  journal={Proceedings of the royal society of london. Series A, Containing papers of a mathematical and physical character},
-  volume={115},
-  number={772},
-  pages={700--721},
-  year={1927},
-  publisher={The Royal Society London}
-}
-
-@article{balcan2009multiscale,
-  title={Multiscale mobility networks and the spatial spreading of infectious diseases},
-  author={Balcan, Duygu and Colizza, Vittoria and Gon{\c{c}}alves, Bruno and Hu, Hao and Ramasco, Jose J and Vespignani, Alessandro},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={106},
-  number={51},
-  pages={21484--21489},
-  year={2009},
-  publisher={National Acad Sciences}
-}
-
 @article{liao2018multi,
   title={Multi-Context Integrated Deep Neural Network Model for Next Location Prediction},
   author={Liao, Jing and Liu, Tao and Liu, Meng and Wang, Jiayi and Wang, Yue and Sun, Hao},
@@ -390,3 +350,149 @@
   publisher={IEEE},
   doi={10.1109/TITS.2022.3181339}
 }
+
+@article{Griggs2013,
+  author    = {David Griggs and Mark Stafford-Smith and Owen Gaffney and Johan Rockstr{\"o}m and Marcus C {\"O}hman and Priya Shyamsundar and Will Steffen and Gisbert Glaser and Norichika Kanie and Ian Noble},
+  title     = {Sustainable development goals for people and planet},
+  journal   = {Nature},
+  volume    = {495},
+  number    = {7441},
+  pages     = {305--307},
+  year      = {2013},
+  publisher = {Nature Publishing Group}
+}
+
+@article{Martin2021,
+  author    = {Henry Martin and Daniel J. Reck and Martin Raubal},
+  title     = {Using Information and Communication Technologies to facilitate mobility behaviour change and enable Mobility as a Service},
+  journal   = {GI\_Forum Journal for Geographic Information Science},
+  volume    = {9},
+  number    = {1},
+  pages     = {187--193},
+  year      = {2021},
+  publisher = {Wiley}
+}
+
+@article{Kraemer2020,
+  author    = {M.U.G. Kraemer and C.-H. Yang and B. Gutierrez and C.-H. Wu and B. Klein and D.M. Pigott and O. Covid and W.P. Hanage and J.S. Brownstein and M. Layan and A. Vespignani and H. Tian and C. Dye and O.G. Pybus and S.V. Scarpino},
+  title     = {The effect of human mobility and control measures on the COVID-19 epidemic in China},
+  journal   = {Science},
+  volume    = {368},
+  number    = {6490},
+  pages     = {493--497},
+  year      = {2020},
+  doi       = {10.1126/science.abb4218},
+  url       = {http://dx.doi.org/10.1126/science.abb4218}
+}
+
+@article{Reck2022,
+  author    = {Daniel J. Reck and Henry Martin and Kay W. Axhausen},
+  title     = {Mode choice, substitution patterns and environmental impacts of shared and personal micro-mobility},
+  journal   = {Transportation Research Part D: Transport and Environment},
+  volume    = {102},
+  pages     = {103134},
+  year      = {2022},
+  publisher = {Elsevier}
+}
+
+@article{Xu2018,
+  author    = {Yanyan Xu and Serdar {\c{C}}olak and Emre C. Kara and Scott J. Moura and Marta C. Gonz{\'a}lez},
+  title     = {Planning for electric vehicle needs by coupling charging profiles with urban mobility},
+  journal   = {Nature Energy},
+  volume    = {3},
+  number    = {6},
+  pages     = {484--493},
+  year      = {2018},
+  publisher = {Nature Publishing Group}
+}
+
+@article{Huang2019,
+  author    = {Haosheng Huang and Dominik Bucher and Julian Kissling and Robert Weibel and Martin Raubal},
+  title     = {Multimodal Route Planning With Public Transport and Carpooling},
+  journal   = {IEEE Transactions on Intelligent Transportation Systems},
+  volume    = {20},
+  pages     = {3513--3525},
+  year      = {2019},
+  publisher = {IEEE}
+}
+
+@article{Ma2022,
+  author    = {Zhenliang Ma and Pengfei Zhang},
+  title     = {Individual mobility prediction review: Data, problem, method and application},
+  journal   = {Multimodal Transportation},
+  volume    = {1},
+  number    = {1},
+  pages     = {100002},
+  year      = {2022},
+  publisher = {Elsevier}
+}
+
+@inproceedings{Feng2018,
+  author    = {Jie Feng and Yong Li and Chao Zhang and Funing Sun and Fanchao Meng and Ang Guo and Depeng Jin},
+  title     = {DeepMove: Predicting Human Mobility with Attentional Recurrent Networks},
+  booktitle = {International World Wide Web Conference (WWW) 2018},
+  pages     = {1459--1468},
+  year      = {2018},
+  publisher = {International World Wide Web Conferences Steering Committee}
+}
+
+@article{Cherchi2017,
+  author    = {Elisabetta Cherchi and Cinzia Cirillo and Juan de Dios Ortúzar},
+  title     = {Modelling correlation patterns in mode choice models estimated on multiday travel data},
+  journal   = {Transportation Research Part A: Policy and Practice},
+  volume    = {96},
+  pages     = {146--153},
+  year      = {2017},
+  publisher = {Elsevier}
+}
+
+@article{Sun2013,
+  author    = {Lijun Sun and Kay W. Axhausen and Der-Horng Lee and Xianfeng Huang},
+  title     = {Understanding metropolitan patterns of daily encounters},
+  journal   = {Proceedings of the National Academy of Sciences},
+  volume    = {110},
+  number    = {34},
+  pages     = {13774--13779},
+  year      = {2013},
+  publisher = {National Academy of Sciences}
+}
+
+@article{Song2010,
+  author    = {Chaoming Song and Zehui Qu and Nicholas Blumm and Albert-László Barabási},
+  title     = {Limits of predictability in human mobility},
+  journal   = {Science},
+  volume    = {327},
+  number    = {5968},
+  pages     = {1018--1021},
+  year      = {2010},
+  publisher = {American Association for the Advancement of Science}
+}
+
+@article{Dharmowijoyo2016,
+  author    = {Dimas B. E. Dharmowijoyo and Yusak O. Susilo and Anders Karlström},
+  title     = {Day-to-day variability in travellers’ activity-travel patterns in the Jakarta metropolitan area},
+  journal   = {Transportation},
+  volume    = {43},
+  number    = {4},
+  pages     = {601--621},
+  year      = {2016},
+  publisher = {Elsevier}
+}
+
+@inproceedings{Hong_2022, series={SIGSPATIAL ’22},
+
+   title={How do you go where?: improving next location prediction by learning travel mode information using transformers},
+
+   url={http://dx.doi.org/10.1145/3557915.3560996},
+
+   DOI={10.1145/3557915.3560996},
+
+   booktitle={Proceedings of the 30th International Conference on Advances in Geographic Information Systems},
+
+   publisher={ACM},
+
+   author={Hong, Ye and Martin, Henry and Raubal, Martin},
+
+   year={2022},
+
+   month=nov, collection={SIGSPATIAL ’22} }
