--- a/docs/FrontMatter/Abstract.tex
+++ b/docs/FrontMatter/Abstract.tex
@@ -1,8 +1,40 @@
 % Abstract.tex
 \begin{resumen}
-	El presente trabajo se centra en el desarrollo de un modelo computacional para simular la movilidad humana y su impacto en la dinámica de enfermedades transmitidas por vectores. La movilidad humana, caracterizada por los desplazamientos de individuos entre diferentes ubicaciones geográficas, juega un papel crucial en la propagación de estas enfermedades.  El modelo propuesto incorpora diversos factores que influyen en la movilidad, como patrones de desplazamiento diarios, viajes de larga distancia y migraciones, para comprender cómo estos movimientos afectan la distribución espacial y temporal de las enfermedades.  Se espera que este modelo contribuya al diseño de estrategias de control más efectivas para mitigar el impacto de estas enfermedades en la salud pública.
-	\end{resumen}
+	La predicción de la siguiente ubicación de un individuo 
+	es crucial para 
+	analizar el comportamiento de la movilidad humana. 
+	Los modelos existentes que indagan en esta problemática a 
+	menudo suelen ignorar información de contexto. Por otra parte, 
+	el análisis de sentimientos es una rama de estudio que se 
+	ha desarrollado en los últimos años, extrayendo información 
+	de redes sociales para predecir el estado emocional de sus usuarios.
+	En este trabajo se propone un modelo que busca predecir la 
+	siguiente ubicación a partir de la combinación del contexto 
+	espacio-temporal con variables de sentimientos, en pos de mejorar 
+	la precisión de la predicción. Para ello, se propone diseñar un 
+	modelo de aprendizaje profundo que permita extraer las 
+	dependencias complejas entre variables y determinar cómo los 
+	estados de un individuo afectan la elección de su siguiente ubicación.\\
+	%Palabras clave
+
+	\textbf{Palabras Clave:}
+	predicci\'on de la siguiente ubicación, movilidad humana, sentimientos, aprendizaje profundo 
+\end{resumen}
 	
-	\begin{abstract}
-	This thesis focuses on the development of a computational model to simulate human mobility and its impact on the dynamics of vector-borne diseases. Human mobility, characterized by the movement of individuals between different geographical locations, plays a crucial role in the spread of these diseases. The proposed model incorporates various factors influencing mobility, such as daily commuting patterns, long-distance travel, and migration, to understand how these movements affect the spatial and temporal distribution of diseases. This model is expected to contribute to design of more effective control strategies to mitigate the impact of these diseases on public health.
-	\end{abstract}
+\begin{abstract}
+	Predicting an individual's next location is crucial for analyzing 
+	human mobility behavior. Existing models that address this issue often 
+	tend to ignore contextual information. On the other hand, sentiment 
+	analysis is a field of study that has developed in recent years, 
+	extracting information from social networks to predict the emotional 
+	state of users. In this work, a model is proposed that aims to 
+	predict the next location by combining spatio-temporal context with 
+	sentiment variables, with the goal of improving prediction accuracy.
+	To achieve this, the proposal is to design a deep learning model 
+	capable of extracting complex dependencies between variables and 
+	determining how an individual's emotional states influence the 
+	choice of their next location.\\
+
+	\textbf{Keywords:}
+	next location prediction, human mobility, sentiment analysis, deep learning
+\end{abstract}
