--- a/docs/Thesis.tex
+++ b/docs/Thesis.tex
@@ -49,7 +49,7 @@
 
 \lstset{style=mystyle}
 
-\title{Problema de la siguiente ubicación utilizando contexto basado en sentimientos}
+\title{Predicci\'on de la siguiente ubicación utilizando contexto basado en sentimientos}
 \author{\\\vspace{0.25cm}Yoan René Ramos Corrales}
 \advisor{\\\vspace{0.25cm}Dra. Aymée de los Ángeles Marrero Severo\\\vspace{0.2cm}Lic. Ernesto Alfonso Hernández}
 \degree{Licenciado en Ciencia de la Computación}
