feat: refine introduction and structure sections in thesis document

--- a/docs/MainMatter/Introduction.tex
+++ b/docs/MainMatter/Introduction.tex
@@ -14,7 +14,7 @@ que la movilidad es un factor determinante en la propagación
 de enfermedades infecciosas  (\cite{Kraemer2020}). Definiciones recientes como
 Movilidad como
 Servicio (MaaS) (\cite{Reck2022}), carga inteligente (\cite{Xu2018}) y 
-\textit{ride-sharing} (\cite{Huang2019}), dependen de la capacidad de ofrecer 
+viaje compartido (\cite{Huang2019}), dependen de la capacidad de ofrecer 
 servicios personalizados adaptados al contexto del viaje y las 
 características individuales (\cite{Ma2022}).
 La movilidad individual, es decir, predecir cuándo y dónde ocurrirá 
@@ -102,14 +102,11 @@ temporales.
 
 %Estructura
 \section{Estructura}
-La estructura del documento est\'a dada por tres capítulos. En el 
+La tesis est\'a estructurada en tres capítulos. En el 
 Capítulo 1 se
 realiza un estudio sobre el marco teórico conceptual del problema. 
 El Capítulo 2 aborda tanto la modelación como la metodolog\'ia utilizada. 
 En el Capítulo 3
 se discuten sobre la implementación del modelo, as\'i como de su 
-evaluaci\'on mediante la experimentaci\'on. Terminado este \'ultimo 
-cap\'itulo
-se da paso a las Conclusiones, la cual resume los aspectos 
-principales,
-dando respuesta a los objetivos según los resultados.
+evaluaci\'on mediante la experimentaci\'on. Finalmente se presentan las Conclusiones, donde se resumen los aspectos 
+fundamentales y se analiza el cumplimiento de los objetivos propuestos; y las Recomendaciones donde se formulan los trabajos futuros.\\
